# ml-from-scratch

./: LICENSE  pyproject.toml
src/: decision_tree.py  train.py
